--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1253,8 +1253,6 @@ section {
   text-align: left;
   flex-wrap: wrap;
 }
-
-
 #resume .resume-content .btn-get-started, #resume .resume-content .btn-projects {
   font-family: "Raleway", sans-serif;
   font-size: 15px;
@@ -1280,6 +1278,53 @@ section {
   border: 2px solid #50d8af;
 }
 #resume .resume-content .btn-projects:hover {
+  background: none;
+  color: #50d8af;
+}
+
+/*--------------------------------------------------------------
+# Resume
+--------------------------------------------------------------*/
+#github {
+  padding: 10px 0 10px 0;
+  overflow: hidden;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: left;
+  flex-wrap: wrap;
+}
+#github .github-content .btn-get-started, #github .github-content .btn-projects {
+  font-family: "Raleway", sans-serif;
+  font-size: 15px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 32px;
+  border-radius: 30px;
+  transition: 0.5s;
+  margin: 10px;
+  color: #fff;
+}
+#github .github-content .btn-get-started {
+  background: #0c2e8a;
+  border: 2px solid #0c2e8a;
+}
+#github .github-content .btn-get-started:hover {
+  background: none;
+  color: #0c2e8a;
+}
+#github .github-content .btn-projects {
+  background: #50d8af;
+  border: 2px solid #50d8af;
+}
+#github .github-content .btn-projects:hover {
   background: none;
   color: #50d8af;
 }
@@ -1330,7 +1375,7 @@ section {
 
 .property-image
 {
-  height:6em;
+  height:7em;
   /* width:14em; */
   width:100%;
   padding:1em 2em;
@@ -1350,7 +1395,7 @@ section {
 .property-description
 {
   background-color: #FAFAFC;
-  height:12em;
+  height:11em;
   /* width:14em; */
   width:100%;
   position:absolute;
@@ -1397,7 +1442,7 @@ section {
 .property-card:hover .property-description
 {
   padding:0px 1em;
-  height:15em;
+  height:12.5em;
 }
 
 /* .property-card:hover .property-image
@@ -1446,4 +1491,87 @@ opacity:1;
   margin-top: calc(-1 * var(--bs-gutter-y));
   margin-right: calc(-.5 * var(--bs-gutter-x));
   margin-left: calc(-.5 * var(--bs-gutter-x));
+}
+
+
+
+/* Technical Aspect Section
+--------------------------------*/
+#technical-aspect {
+  padding: 40px 0;
+}
+#technical-aspect .box {
+  padding: 20px;
+  box-shadow: 10px 10px 15px rgba(73, 78, 92, 0.1);
+  background: #fff;
+  transition: 0.4s;
+  height: 100%;
+}
+#technical-aspect .box:hover {
+  box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
+  transform: translateY(-10px);
+  -webkit-transform: translateY(-10px);
+  -moz-transform: translateY(-10px);
+}
+#technical-aspect .box .icon {
+  float: left;
+}
+#technical-aspect .box .icon i {
+  color: #444;
+  font-size: 64px;
+  transition: 0.5s;
+  line-height: 0;
+  margin-top: 34px;
+}
+#technical-aspect .box .icon i:before {
+  background: #0c2e8a;
+  background: linear-gradient(45deg, #50d8af 0%, #a3ebd5 100%);
+  background-clip: border-box;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+#technical-aspect .box h4 {
+  margin-left: 80px;
+  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 22px;
+}
+#technical-aspect .box h4 a {
+  color: #444;
+}
+#technical-aspect .box p {
+  font-size: 14px;
+  margin-left: 80px;
+  margin-bottom: 0;
+  line-height: 24px;
+}
+@media (max-width: 767px) {
+  #technical-aspect .box .box {
+    margin-bottom: 20px;
+  }
+  #technical-aspect .box .icon {
+    float: none;
+    text-align: center;
+    padding-bottom: 15px;
+  }
+  #technical-aspect .box h4, #technical-aspect .box p {
+    margin-left: 0;
+    text-align: center;
+  }
+}
+
+#project-introduction, #project-finding {
+  padding: 20px 0 10px 0;
+  overflow: hidden;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: left;
+  flex-wrap: wrap;
 }
