Created project html file - Airbnb Price Estimator

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1560,7 +1560,7 @@ opacity:1;
   }
 }
 
-#project-introduction, #project-finding {
+#project-introduction, #project-finding, #project-video {
   padding: 20px 0 10px 0;
   overflow: hidden;
   bottom: 0;
