--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1392,12 +1392,12 @@ section {
 
 .no-webp .property-image-HnM-project
 {
-  background-image:url('../img/Projects/H&M-Logo.jpeg');
+  background-image:url('../img/Projects/H&M-Logo-2.jpeg');
 }
 
 .webp .property-image-HnM-project
 {
-  background-image:url('../img/webp-images/Projects/H&M-Logo.webp');
+  background-image:url('../img/webp-images/Projects/H&M-Logo-2.webp');
 }
 
 .no-webp .property-image-election-project
