--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  background: #fff;
+  background: #bbd2dd62;
   color: #444;
   font-family: "Open Sans", sans-serif;
 }
@@ -78,7 +78,7 @@ h2, h3, h4 {
 # Top Bar
 --------------------------------------------------------------*/
 #topbar {
-  background: #fff;
+  background: #fffddc;
   border-bottom: 1px solid #eee;
   font-size: 14px;
   padding: 0;
@@ -1683,4 +1683,5 @@ opacity:1;
   background:rgb(23,44,60); 
   -webkit-transition: width 1.5s ease-in-out;
   transition: width 1.5s ease-in-out;
+  height: 10px;
 }
