--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ h2, h3, h4 {
 # Top Bar
 --------------------------------------------------------------*/
 #topbar {
-  background: #fffddc;
+  background: #ffffff;
   border-bottom: 1px solid #eee;
   font-size: 14px;
   padding: 0;
